pdfobject-custom.css - wrapper visibility fix

--- a/assets/css/pdfobject-custom.css
+++ b/assets/css/pdfobject-custom.css
@@ -1,3 +1,6 @@
-.pdfobject-embed.pdfobject-container {
+.pdfobject-container {
     height: 100%;
+}
+.pdfobject-wrapper {
+    display: none;
 }
